# DS_Project1

./: .gitignore  03_FeatureEngineer.ipynb  Datasets.md  README.md  Report.ipynb  pyproject.toml  requirements.txt
data/metadata/: ingest_log.json  sources.md
docs/: CLEANING_AND_MERGING.md  Report draft.ipynb  featureEngineer.md
notebooks/: 00_smoke_test.ipynb  01_EDA_Analysis.ipynb  02_Data_Preprocessing.ipynb  03_FeatureEngineer.ipynb
src/acquire/: __init__.py  _http.py  _loaders.py  _utils.py  acs.py  fred.py  geo.py  nyc_crime.py  zillow.py
